--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,8 @@ transition: all 0.3s ease;
 /*spinner css*/
 .spinner-container {
   position: relative;
-  height: 96px;
-  width: 96px;
+  height: 80px;
+  width: 80px;
   margin: 0 auto;
 }
 
@@ -240,6 +240,7 @@ body .card:active {
   height: 30vh !important;
   justify-content: flex-start !important;
   padding: 12px !important;
+  /* overflow: hidden; */
 }
 
 .cards1 .green {
@@ -286,7 +287,6 @@ body .card:active {
 }
  .card2 {
   width: 100%;
-  height: calc((250px / 100vh) * 100);
   background-color: #2b3147;
   border-radius: 20px;
  
@@ -574,8 +574,10 @@ body {
 
 
 .home{
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(14,121,9,1) 0%, rgba(124,123,123,1) 0%, rgba(105,105,105,1) 0%, rgba(1,207,242,1) 100%);
+    background: #329da8;
+
+  /* background: rgb(2,0,36); */
+  /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(14,121,9,1) 0%, rgba(124,123,123,1) 0%, rgba(105,105,105,1) 0%, rgba(1,207,242,1) 100%); */
 }
 .btn-link {
   transition: transform 0.3s ease-in-out;
@@ -611,6 +613,7 @@ padding: 15px; /* adjust as needed */
 .outer-wrapper {
 background: transparent;
 width: 100%;  /* Adjust as needed */
+
 }
 
 .column-wrapper {
