--- a/styles.css
+++ b/styles.css
@@ -137,9 +137,8 @@ transition: all 0.3s ease;
 
 body .card {
   box-sizing: border-box;
-  width: 30%; 
+  width: 31%; 
 
-  min-width: calc((190px / 100vw) * 100);  
   height: 26vh;
 
   
@@ -239,31 +238,32 @@ body .card:active {
 
   border-radius: 20px;
   transition: all .3s;
- }
- .container .row {
+}
+
+.container .row {
   margin-bottom: 0;
 }
- .card2 {
-  width: 100%;
+.card2 {
+  width: 99%;
   background-color: #292929 ;
   border-radius: 20px;
- 
+
   transition: all .2s;
- }
- 
- .card2:hover {
+  }
+
+.card2:hover {
   transform: scale(0.98);
   border-radius: 20px;
- }
- 
- .card3:hover {
+}
+
+.card3:hover {
   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
- }
+}
 
 
 
 
- .timer {
+.timer {
   font-size: 30px;
   font-family: MyCustomFont, Arial, sans-serif;
   
@@ -538,21 +538,23 @@ body {
   /* background: rgb(2,0,36); */
   /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(14,121,9,1) 0%, rgba(124,123,123,1) 0%, rgba(105,105,105,1) 0%, rgba(1,207,242,1) 100%); */
 }
+
 .btn-link {
   transition: transform 0.3s ease-in-out;
 }
 .btn-link:active,
 .btn-link:focus {
-  transform: scale(1.5);
+  transform: scale(1.25);
   box-shadow: none !important;
   outline: 0 !important;
+
 }
-.btn-link .active-icon {
-  color: #87C43D  !important; /* Change this to the color you want */
+.btn-link .active {
+  color: #329da8  !important; /* Change this to the color you want */
 }
+
+
 .meta-info {
-  
-  
   background-color: black;
    /* Set the desired height for the upper row */
 }
