Clock bug resolved

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@
   transform: translate(0%, 0%);
   font-family: Arial, sans-serif;
   font-size: 1.8vh;
-  color: #F00000; /* Change color here */
+  color: #d6d4d0; /* Change color here */
 }
 
 /* Keyframes animation for spinner rotation */
