--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-sidebar buttons
- .buttons{
-  margin-left: -5%;
-}
-
 
 /* Home drop down styling */
 .dropdown-content {
@@ -19,7 +14,7 @@ sidebar buttons
 /* Styling for individual items in the drop-down */
 .dropdown-content p {
   margin: 0;
-  padding: 5px;
+  padding: 2px;
 }
 
 /* Hover effect for drop-down items */
@@ -47,8 +42,8 @@ sidebar buttons
 /* Spinner CSS */
 .spinner-container {
   position: relative;
-  height: 12.5vh;
-  width: 12.5vh;
+  height: 11vh;
+  width: 11vh;
   margin: 0 auto;
 }
 
@@ -162,25 +157,34 @@ body .card:active {
 .cards1 {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-}
-
-/* Styling for red card */
-.cards1 .red {
-  background-color: #292929;
+  gap: 12px;
 }
 
 /* Styling for blue card */
 .cards1 .blue {
   background-color: #292929;
-  height: 30vh !important;
+  height: 70%;
   justify-content: flex-start !important;
   padding: 12px !important;
+}
+
+/* Styling for red card */
+.cards1 .red {
+  background-color: #292929;
+  width: 60% !important;
+  height: 100%;
 }
 
 /* Styling for green card */
 .cards1 .green {
   background-color: #292929;
+  width: 40% !important;
+  height: 100%;
+}
+
+.cards1 .greenred {
+  flex-direction: row;
+  height: 25%;
 }
 
 /* Styling for individual cards inside the container */
@@ -190,7 +194,6 @@ body .card:active {
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  height: 15vh;
   width: 100%;
   border-radius: 10px;
   color: white;
@@ -232,7 +235,7 @@ body .card:active {
 
 /* Styling for the timer section */
 .timer {
-  font-size: 3vw;
+  font-size: 4vw;
   font-family: MyCustomFont, Arial, sans-serif;
   text-align: center;
   color: #329da8; 
